--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
-streamlit==1.31.0
-langchain-community==0.0.16
-groq==0.13.1
-python-dotenv==1.0.1
-chromadb==0.4.22
-sentence-transformers==2.5.1
-transformers==4.37.2
-torch==2.2.0
-pydantic==1.10.13
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-numpy==1.26.3
-pandas==2.2.0
-tqdm==4.66.1
-requests==2.31.0
+streamlit>=1.31.0,<2.0.0
+langchain-community>=0.0.16,<0.1.0
+groq>=0.13.1,<0.14.0
+python-dotenv>=1.0.0,<2.0.0
+chromadb>=0.4.22,<0.5.0
+sentence-transformers>=2.5.1,<3.0.0
+transformers>=4.37.2,<5.0.0
+torch>=2.2.0,<3.0.0
+pydantic>=1.10.13,<2.0.0
+typing-inspect>=0.9.0,<1.0.0
+typing_extensions>=4.9.0,<5.0.0
+numpy>=1.26.3,<2.0.0
+pandas>=2.2.0,<3.0.0
+tqdm>=4.66.1,<5.0.0
+requests>=2.31.0,<3.0.0
+markdown-it-py>=3.0.0,<4.0.0
+rich>=14.0.0,<15.0.0
+Pygments>=2.19.1,<3.0.0
+mdurl>=0.1.2,<0.2.0
